@@ -22,7 +22,7 @@
   <email>chuck@horde.org</email>
   <active>no</active>
  </lead>
- <date>2022-03-10</date>
+ <date>2022-10-08</date>
  <version>
   <release>3.0.0alpha6</release>
   <api>3.0.0alpha1</api>
@@ -33,7 +33,8 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1-only</license>
  <notes>
-* 
+* [rla] Improved PHP 8.1 compatibility.
+* |+
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -546,53 +547,6 @@
   </filelist>
  </phprelease>
  <changelog>
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
   <release>
    <version>
     <release>0.0.1</release>
@@ -1343,9 +1297,10 @@
     <api>alpha</api>
    </stability>
    <date>2022-03-10</date>
-   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1-only</license>
    <notes>
-* 
+* [rla] Improved PHP 8.1 compatibility.
+* |+
    </notes>
   </release>
  </changelog>
