@@ -2,7 +2,8 @@
 v3.0.0alpha6
 ------------
 
-
+[rla] Improved PHP 8.1 compatibility.
+|+
 
 
 ------------
